[gd_scene load_steps=5 format=2]

[ext_resource path="res://maps/CustomTileMap/CustomTileMap.gd" type="Script" id=1]
[ext_resource path="res://tilesets/basic_tileset.tres" type="TileSet" id=2]
[ext_resource path="res://resources/walls/hjm-mossy_wall_low.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 0.5

[node name="CustomTileMap" type="YSort"]
script = ExtResource( 1 )
tileset = ExtResource( 2 )

[node name="AStarMap" type="TileMap" parent="."]
format = 1

[node name="CellBoundaries" type="YSort" parent="."]
visible = false

[node name="Shapes" type="YSort" parent="."]
visible = false

[node name="MouseCollision" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseCollision"]
shape = SubResource( 1 )

[node name="TestTilemap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
format = 1

[node name="Preview" type="Sprite" parent="."]
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 777.13, 389.676, 64, 124 )
